--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,4 +1,3 @@
-
 .header {
     display: flex;
     flex-direction: column;
@@ -6,9 +5,7 @@
     position: relative;
 }
 
-.header::after {
-    content: '';
-    display: inline-block;
+.header-icon {
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -17,6 +14,12 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url('../img/icons/header.svg');
+    cursor: pointer; 
+}
+
+.header-icon:active {
+    transform: scale(0.9);
+    transition: .25s;
 }
 
 .header .photo {
@@ -54,7 +57,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
-} 
+}
 
 .information .job::before {
     background-image: url('../img/icons/job.svg');
@@ -72,13 +75,50 @@
     background-image: url('../img/icons/phone.svg');
 }
 
+.card {
+    display: none; 
+    position: absolute;
+    top: 3rem; 
+    right: 1rem; 
+    width: 200px; 
+    padding: 1rem;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 1px solid #fff;
+    border-radius: 0.5rem;
+    opacity: 0;
+    height: 0;
+    overflow: hidden;
+    transition: opacity 0.3s ease, height 0.3s ease;
+}
+
+.card.visible {
+    display: block;
+    opacity: 1;
+    height: 100px; 
+}
+
+.social-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #fff;
+    margin-bottom: 0.5rem; 
+}
+
+.social-link svg {
+    margin-right: 0.5rem;
+}
+
+.social-link span {
+    font-size: 1rem;
+}
+
 @media only screen and (min-width: 768px) {
     .header {
         display: grid;
         grid-template-areas: 
             "photo title"
-            "photo information"
-        ;
+            "photo information";
     }
 
     .header .photo {
@@ -96,4 +136,3 @@
         grid-area: information;
     }
 }
-
